# nectar-poly

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  claude.md  docker-compose.yml
.claude/: settings.local.json
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  useAlerts.ts  useDevices.ts  useSoftware.ts
frontend/src/components/: StatusBadge.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  table.tsx  tabs.tsx
frontend/src/lib/: mock-data.ts
frontend/src/pages/Alerts/: index.tsx
frontend/src/pages/FleetOverview/: index.tsx
frontend/src/pages/Inventory/: DeviceDetailSheet.tsx  index.tsx
frontend/src/pages/Software/: index.tsx
frontend/src/types/: alert.ts  api.ts  device.ts  software.ts
k8s/: deployment.yaml  namespace.yaml  secrets.yaml  service.yaml
migrations/: 20240101000000_initial_schema.sql
seeds/: seed.sql
src/: main.rs
src/api/: mod.rs
src/api/handlers/: alerts.rs  devices.rs  health.rs  ingest.rs  mod.rs  software.rs
src/auth/: mod.rs
src/config/: mod.rs
src/domain/: alerts.rs  devices.rs  mod.rs  pagination.rs  software.rs
src/ingestion/: mod.rs  validator.rs
src/logging/: mod.rs  redact.rs
src/storage/: alerts.rs  devices.rs  events.rs  mod.rs  software.rs
